Se agrego la implementacion de las record clas DTO, se mejoraron algunas vistas y funcionalidad de la app, se implento el uso de DTOS en el TurnoController